--- a/Projekt/Projekt.ioc
+++ b/Projekt/Projekt.ioc
@@ -10,6 +10,12 @@ ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_480CYCLES
 ADC1.ScanConvMode=ADC_SCAN_DISABLE
 ADC1.master=1
+ARM.CMSIS.5.7.0.CMSISJjCORE=true
+ARM.CMSIS.5.7.0.CMSISJjCORE_Checked=true
+ARM.CMSIS.5.7.0.CMSISJjDSP=Library
+ARM.CMSIS.5.7.0.CMSISJjDSP_Checked=true
+ARM.CMSIS.5.7.0.IPParameters=CMSISJjCORE,CMSISJjDSP
+ARM.CMSIS.5.7.0_SwParameter=CMSISJjDSP\:Library;CMSISJjCORE\:true;
 File.Version=6
 I2C1.IPParameters=Timing
 I2C1.Timing=0x20404768
@@ -59,14 +65,17 @@ Mcu.Pin34=PB9
 Mcu.Pin35=VP_SYS_VS_Systick
 Mcu.Pin36=VP_TIM2_VS_ClockSourceINT
 Mcu.Pin37=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin38=VP_ARM.CMSIS_VS_CMSISJjCORE_5.4.0_5.7.0
+Mcu.Pin39=VP_ARM.CMSIS_VS_CMSISJjDSP_1.8.0_5.7.0
 Mcu.Pin4=PH1/OSC_OUT
 Mcu.Pin5=PC1
 Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
 Mcu.Pin9=PA6
-Mcu.PinsNb=38
-Mcu.ThirdPartyNb=0
+Mcu.PinsNb=40
+Mcu.ThirdParty0=ARM.CMSIS.5.7.0
+Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
 Mcu.UserName=STM32F767ZITx
 MxCube.Version=6.3.0
@@ -343,8 +352,8 @@ SH.S_TIM3_CH2.ConfNb=1
 SH.S_TIM3_CH3.0=TIM3_CH3,PWM Generation3 CH3
 SH.S_TIM3_CH3.ConfNb=1
 TIM2.IPParameters=Prescaler,Period
-TIM2.Period=99999
-TIM2.Prescaler=215
+TIM2.Period=129869
+TIM2.Prescaler=107
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
@@ -357,6 +366,10 @@ TIM3.Pulse-PWM\ Generation3\ CH3=0
 USART3.BaudRate=9600
 USART3.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART3.VirtualMode-Asynchronous=VM_ASYNC
+VP_ARM.CMSIS_VS_CMSISJjCORE_5.4.0_5.7.0.Mode=CMSISJjCORE
+VP_ARM.CMSIS_VS_CMSISJjCORE_5.4.0_5.7.0.Signal=ARM.CMSIS_VS_CMSISJjCORE_5.4.0_5.7.0
+VP_ARM.CMSIS_VS_CMSISJjDSP_1.8.0_5.7.0.Mode=CMSISJjDSP
+VP_ARM.CMSIS_VS_CMSISJjDSP_1.8.0_5.7.0.Signal=ARM.CMSIS_VS_CMSISJjDSP_1.8.0_5.7.0
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM2_VS_ClockSourceINT.Mode=Internal
