--- a/Projekt/Projekt.ioc
+++ b/Projekt/Projekt.ioc
@@ -17,63 +17,69 @@ ARM.CMSIS.5.7.0.CMSISJjDSP_Checked=true
 ARM.CMSIS.5.7.0.IPParameters=CMSISJjCORE,CMSISJjDSP
 ARM.CMSIS.5.7.0_SwParameter=CMSISJjDSP\:Library;CMSISJjCORE\:true;
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 I2C1.IPParameters=Timing
 I2C1.Timing=0x20404768
+I2C2.IPParameters=Timing
+I2C2.Timing=0x20404768
 KeepUserPlacement=false
 Mcu.Family=STM32F7
 Mcu.IP0=ADC1
 Mcu.IP1=CORTEX_M7
 Mcu.IP2=I2C1
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SYS
-Mcu.IP6=TIM2
-Mcu.IP7=TIM3
-Mcu.IP8=USART3
-Mcu.IPNb=9
+Mcu.IP3=I2C2
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SYS
+Mcu.IP7=TIM2
+Mcu.IP8=TIM3
+Mcu.IP9=USART3
+Mcu.IPNb=10
 Mcu.Name=STM32F767ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14/OSC32_IN
-Mcu.Pin10=PA7
-Mcu.Pin11=PC4
-Mcu.Pin12=PC5
-Mcu.Pin13=PB0
-Mcu.Pin14=PB13
-Mcu.Pin15=PB14
-Mcu.Pin16=PD8
-Mcu.Pin17=PD9
-Mcu.Pin18=PG6
-Mcu.Pin19=PG7
+Mcu.Pin10=PA3
+Mcu.Pin11=PA6
+Mcu.Pin12=PA7
+Mcu.Pin13=PC4
+Mcu.Pin14=PC5
+Mcu.Pin15=PB0
+Mcu.Pin16=PB13
+Mcu.Pin17=PB14
+Mcu.Pin18=PD8
+Mcu.Pin19=PD9
 Mcu.Pin2=PC15/OSC32_OUT
-Mcu.Pin20=PC7
-Mcu.Pin21=PC8
-Mcu.Pin22=PA8
-Mcu.Pin23=PA9
-Mcu.Pin24=PA10
-Mcu.Pin25=PA11
-Mcu.Pin26=PA12
-Mcu.Pin27=PA13
-Mcu.Pin28=PA14
-Mcu.Pin29=PG11
-Mcu.Pin3=PH0/OSC_IN
-Mcu.Pin30=PG13
-Mcu.Pin31=PB3
-Mcu.Pin32=PB7
-Mcu.Pin33=PB8
-Mcu.Pin34=PB9
-Mcu.Pin35=VP_SYS_VS_Systick
-Mcu.Pin36=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin37=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin38=VP_ARM.CMSIS_VS_CMSISJjCORE_5.4.0_5.7.0
-Mcu.Pin39=VP_ARM.CMSIS_VS_CMSISJjDSP_1.8.0_5.7.0
-Mcu.Pin4=PH1/OSC_OUT
-Mcu.Pin5=PC1
-Mcu.Pin6=PA1
-Mcu.Pin7=PA2
-Mcu.Pin8=PA3
-Mcu.Pin9=PA6
-Mcu.PinsNb=40
+Mcu.Pin20=PG6
+Mcu.Pin21=PG7
+Mcu.Pin22=PC7
+Mcu.Pin23=PC8
+Mcu.Pin24=PA8
+Mcu.Pin25=PA9
+Mcu.Pin26=PA10
+Mcu.Pin27=PA11
+Mcu.Pin28=PA12
+Mcu.Pin29=PA13
+Mcu.Pin3=PF0
+Mcu.Pin30=PA14
+Mcu.Pin31=PG11
+Mcu.Pin32=PG13
+Mcu.Pin33=PB3
+Mcu.Pin34=PB7
+Mcu.Pin35=PB8
+Mcu.Pin36=PB9
+Mcu.Pin37=VP_SYS_VS_Systick
+Mcu.Pin38=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin39=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin4=PF1
+Mcu.Pin40=VP_ARM.CMSIS_VS_CMSISJjCORE_5.4.0_5.7.0
+Mcu.Pin41=VP_ARM.CMSIS_VS_CMSISJjDSP_1.8.0_5.7.0
+Mcu.Pin5=PH0/OSC_IN
+Mcu.Pin6=PH1/OSC_OUT
+Mcu.Pin7=PC1
+Mcu.Pin8=PA1
+Mcu.Pin9=PA2
+Mcu.PinsNb=42
 Mcu.ThirdParty0=ARM.CMSIS.5.7.0
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -83,6 +89,7 @@ MxDb.Version=DB.6.0.30
 NVIC.ADC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+NVIC.EXTI15_10_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.I2C1_ER_IRQn=true\:0\:0\:false\:false\:true\:true\:true
@@ -200,6 +207,10 @@ PD9.GPIO_Label=STLK_TX [STM32F103CBT6_PA2]
 PD9.Locked=true
 PD9.Mode=Asynchronous
 PD9.Signal=USART3_RX
+PF0.Mode=I2C
+PF0.Signal=I2C2_SDA
+PF1.Mode=I2C
+PF1.Signal=I2C2_SCL
 PG11.GPIOParameters=GPIO_Label
 PG11.GPIO_Label=RMII_TX_EN [LAN8742A-CZ-TR_TXEN]
 PG11.Locked=true
@@ -252,7 +263,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_USART3_UART_Init-USART3-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_TIM3_Init-TIM3-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_I2C1_Init-I2C1-false-HAL-true,8-MX_I2C2_Init-I2C2-false-HAL-true,9-MX_TIM5_Init-TIM5-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
